--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env NODE_PATH=src react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -24,7 +24,4 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "cross-env": "^5.2.0"
-  }
 }
